--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-gesture-handler": "^2.15.0",
     "react-native-maps": "^1.10.0"
   },
   "devDependencies": {
