--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2",
-    "react-native-gesture-handler": "^2.15.0",
-    "react-native-maps": "^1.10.0"
+    "react-native": "^0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-maps": "1.10.0",
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
