--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "^0.73.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "1.10.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
