--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.7",
     "expo": "~50.0.6",
@@ -18,6 +19,9 @@
     "react-native": "^0.73.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "1.10.0",
+    "react-native-reanimated": "^3.7.0",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
     "react-router-dom": "^6.22.0"
   },
